--- a/thesis-project-main/index.html
+++ b/thesis-project-main/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css" integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Personal CSS -->
-  <link rel="stylesheet" href="./Style/Index.css">
+  <link rel="stylesheet" href="./client/public/Style/Index.css">
 </head>
 
 <body id='orderPage'>
